<resources>
    <string name="app_name">FamShare</string>
    <string name="plus_care">PLUS CARE</string>
    <string name="kids">KIDS</string>
    <string name="welcome_to_families_share">Welcome to Families Share!</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="not_a_member_register">Not a member? Register</string>
    <string name="here">Here</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">sign up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="accetto_alle_condizioni_sulla_privacy">Accetto alle condizioni sulla privacy</string>
    <string name="leggi_qui">(Leggi qui)</string>
    <string name="informativa_riguardo_al_trattamento_dei_dati_personali_art_13_reg_ue_2016_679_gentile_cliente_ai_fini_previsti_dal_regolamento_ue_2016_679_sopra_richiamato_di_seguito_g_d_p_r_2016_679_recante_le_nuove_disposizioni_a_tutela_della_privacy_e_relativo_alla_protezione_e_al_trattamento_dei_dati_personali_si_informa_che_il_trattamento_dei_dati_personali_da_lei_gi_forniti_ed_acquisiti_e_che_da_lei_saranno_forniti_in_futuro_in_qualit_di_interessato_saranno_oggetto_di_trattamento_nel_rispetto_della_normativa_prevista_dal_citato_regolamento_e_degli_obblighi_di_riservatezza_correttezza_liceit_e_trasparenza_a_titolare_del_trattamento_il_titolare_del_trattamento_con_sede_in_c_f_p_iva_in_nome_del_suo_legale_rappresentante_c_f_b_finalit_del_trattamento_i_dati_personali_forniti_sono_necessari_ai_fini_ad_es_della_conclusione_e_della_gestione_del_rapporto_di_incarico_professionale_per_gli_adempimenti_di_legge_previsti_per_lo_svolgimento_dell_attivit_di_consulenza_fiscale_c_modalit_di_trattamento_e_conservazione_il_trattamento_dei_dati_da_lei_forniti_svolto_sia_in_forma_automatizzata_sia_in_forma_manuale_nel_rispetto_di_quanto_previsto_dall_art_32_del_g_d_p_r_2016_679_ad_opera_di_soggetti_appositamente_incaricati_e_in_ottemperanza_a_quanto_previsto_dall_art_29_del_g_d_p_r_2016_679_le_segnaliamo_che_nel_rispetto_dei_principi_di_liceit_limitazione_delle_finalit_e_minimizzazione_dei_dati_ai_sensi_dell_art_5_del_g_d_p_r_2016_679_previo_il_suo_consenso_libero_ed_esplicito_espresso_nell_allegato_alla_presente_informativa_i_suoi_dati_personali_saranno_conservati_per_il_periodo_di_tempo_necessario_per_il_conseguimento_delle_finalit_per_le_quali_sono_raccolti_e_trattati_e_comunque_non_oltre_i_termini_stabiliti_dalle_normative_fiscali_normative_del_lavoro_e_previdenziali_e_dal_codice_civile_in_materia_e_per_ulteriori_dieci_anni_d_ambito_di_comunicazione_e_diffusione_la_informiamo_inoltre_che_i_dati_raccolti_non_saranno_mai_diffusi_e_non_saranno_oggetto_di_comunicazione_senza_il_suo_esplicito_consenso_salvo_le_comunicazioni_necessarie_che_possono_comportare_il_trasferimento_di_dati_ad_enti_pubblici_a_consulenti_o_ad_altri_soggetti_per_l_adempimento_degli_obblighi_di_legge_inoltre_tali_dati_potranno_essere_conosciuti_nei_limiti_della_normativa_vigente_da_dipendenti_e_o_collaboratori_espressamente_nominati_ed_incaricati_dal_titolare_e_categorie_particolari_di_dati_personali_ai_sensi_degli_articoli_9_e_10_del_g_d_p_r_2016_679_lei_potrebbe_conferire_alla_nostra_organizzazione_dati_qualificabili_come_categorie_particolari_di_dati_personali_e_cio_quei_dati_che_rivelano_l_origine_razziale_o_etnica_le_opinioni_politiche_le_convenzioni_religiose_o_filosofiche_o_l_appartenenza_sindacale_nonch_dati_genetici_dati_biometrici_intesi_a_identificare_in_modo_univoco_una_persona_fisica_dati_relativi_alla_salute_o_alla_vita_sessuale_o_all_orientamento_sessuale_della_persona_tali_categorie_di_dati_potranno_essere_trattate_solo_previo_ed_esplicito_consenso_manifestato_in_forma_scritta_in_allegato_alla_presente_informativa_f_diritti_dell_interessato_in_relazione_ai_dati_oggetto_del_trattamento_di_cui_alla_presente_informativa_all_interessato_riconosciuto_in_qualsiasi_momento_il_diritto_di_accesso_art_15_regolamento_ue_n_2016_679_rettifica_art_16_regolamento_ue_n_2016_679_cancellazione_art_17_regolamento_ue_n_2016_679_limitazione_art_18_regolamento_ue_n_2016_679_portabilit_intesa_come_diritto_ad_ottenere_dal_titolare_del_trattamento_i_dati_in_un_formato_strutturato_di_uso_comune_e_leggibile_da_dispositivo_automatico_per_trasmetterli_ad_un_altro_titolare_del_trattamento_senza_impedimenti_art_20_regolamento_ue_n_2016_679_opposizione_al_trattamento_art_21regolamento_ue_n_2016_679_revoca_del_consenso_al_trattamento_senza_pregiudizio_per_la_liceit_del_trattamento_basata_sul_consenso_acquisito_prima_della_revoca_art_7_par_3_regolamento_ue_n_2016_679_proporre_reclamo_all_autorit_garante_per_la_protezione_dei_dati_personali_art_51_regolamento_ue_n_2016_679">INFORMATIVA RIGUARDO AL TRATTAMENTO DEI DATI PERSONALI (ART. 13 REG. UE 2016/679) Gentile Cliente, ai fini previsti dal Regolamento UE 2016/679 sopra richiamato (di seguito “G.D.P.R. 2016/679”), recante le nuove disposizioni a tutela della “privacy” e relativo alla protezione e al trattamento dei dati personali, si informa che il trattamento dei dati personali da Lei già forniti ed acquisiti e che da Lei saranno forniti in futuro in qualità di “interessato”, saranno oggetto di trattamento nel rispetto della normativa prevista dal citato Regolamento e degli obblighi di riservatezza, correttezza, liceità e trasparenza. a) Titolare del trattamento Il titolare del trattamento è “_______________________” con sede in ______________________ – C.F. _________________ P.Iva: ____________________ in nome del suo legale rappresentante _________________________, C.F. _______________________________________; b) Finalità del trattamento I dati personali forniti sono necessari ai fini _______________________________ (ad es. della conclusione e della gestione del rapporto di incarico professionale, per gli adempimenti di legge previsti per lo svolgimento dell’attività di consulenza fiscale). c) Modalità di trattamento e conservazione Il trattamento dei dati da Lei forniti è svolto sia in forma automatizzata sia in forma manuale nel rispetto di quanto previsto dall’art. 32 del G.D.P.R. 2016/679, ad opera di soggetti appositamente incaricati e in ottemperanza a quanto previsto dall’art 29 del G.D.P.R. 2016/679. Le segnaliamo che, nel rispetto dei principi di liceità, limitazione delle finalità e minimizzazione dei dati, ai sensi dell’art. 5 del G.D.P.R. 2016/679, previo il Suo consenso libero ed esplicito espresso nell’allegato alla presente informativa, i suoi dati personali saranno conservati per il periodo di tempo necessario per il conseguimento delle finalità per le quali sono raccolti e trattati e comunque non oltre i termini stabiliti dalle normative fiscali, normative del lavoro e previdenziali e dal codice civile in materia e per ulteriori dieci anni. d) Ambito di comunicazione e diffusione La informiamo, inoltre, che i dati raccolti non saranno mai diffusi e non saranno oggetto di comunicazione senza il Suo esplicito consenso, salvo le comunicazioni necessarie che possono comportare il trasferimento di dati ad enti pubblici, a consulenti o ad altri soggetti per l’adempimento degli obblighi di legge. Inoltre tali dati potranno essere conosciuti, nei limiti della normativa vigente da dipendenti e/o collaboratori espressamente nominati ed incaricati dal Titolare. e) Categorie particolari di dati personali Ai sensi degli articoli 9 e 10 del G.D.P.R. 2016/679, Lei potrebbe conferire alla nostra organizzazione dati qualificabili come “categorie particolari di dati personali” e cioè quei dati che rivelano “l’origine razziale o etnica, le opinioni politiche, le convenzioni religiose o filosofiche, o l’appartenenza sindacale, nonché dati genetici, dati biometrici intesi a identificare in modo univoco una persona fisica, dati relativi alla salute o alla vita sessuale o all’orientamento sessuale della persona” tali categorie di dati potranno essere trattate solo previo ed esplicito consenso, manifestato in forma scritta in allegato alla presente informativa. f) Diritti dell’interessato In relazione ai dati oggetto del trattamento di cui alla presente informativa all’interessato è riconosciuto in qualsiasi momento il diritto di: • Accesso (art. 15 Regolamento UE n. 2016/679); • Rettifica (art. 16 Regolamento UE n. 2016/679); • Cancellazione (art. 17 Regolamento UE n. 2016/679); • Limitazione (art. 18 Regolamento UE n. 2016/679); • Portabilità, intesa come diritto ad ottenere dal titolare del trattamento i dati in un formato strutturato di uso comune e leggibile da dispositivo automatico per trasmetterli ad un altro titolare del trattamento senza impedimenti (art. 20 Regolamento UE n. 2016/679); • Opposizione al trattamento (art. 21Regolamento UE n. 2016/679); • Revoca del consenso al trattamento, senza pregiudizio per la liceità del trattamento basata sul consenso acquisito prima della revoca (art. 7, par. 3 Regolamento UE n. 2016/679); • Proporre reclamo all’Autorità Garante per la Protezione dei dati personali (art. 51 Regolamento UE n. 2016/679).</string>
    <string name="profilo">Profilo</string>
    <string name="richieste">Richieste</string>
    <string name="incarichi">Incarichi</string>
    <string name="info">Info</string>
    <string name="menu">Menu</string>
    <string name="plus">+</string>
    <string name="title_activity_info">InfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="le_mie_richieste">Le mie richieste</string>
</resources>